# TextureGen

./: .gitignore  CMakeLists.txt  README.md  main.cpp  model.cpp  model.h
Camera/: CMakeLists.txt  camera.cpp  camera.h
Engines/: CMakeLists.txt  spatiotemporalengine.cpp  surfacesimplificationengine.cpp  textureengine.h  texturemapgenengine.cpp
Engines/CUDA/: CMakeLists.txt  CUDAFunctions.cu  CUDAFunctions.h
Light/: CMakeLists.txt  light.cpp  light.h
Mesh/: CMakeLists.txt  mesh.cpp  mesh.h
Shader/: CMakeLists.txt  shader.cpp  shader.h
Shader/GLSLSources/: fragmentshader.fsh  geometryshader.vert  vertexshader.fsh
Teddy/: CMakeLists.txt
Teddy/Poses/: Pose0.txt  Pose1.txt  Pose10.txt  Pose100.txt  Pose101.txt  Pose102.txt  Pose103.txt  Pose104.txt  Pose105.txt  Pose106.txt  Pose107.txt  Pose108.txt  Pose109.txt  Pose11.txt  Pose110.txt  Pose111.txt  Pose112.txt  Pose113.txt  Pose114.txt  Pose115.txt  Pose116.txt  Pose117.txt  Pose118.txt  Pose119.txt  Pose12.txt  Pose120.txt  Pose121.txt  Pose122.txt  Pose123.txt  Pose124.txt  Pose125.txt  Pose126.txt  Pose127.txt  Pose128.txt  Pose129.txt  Pose13.txt  Pose130.txt  Pose131.txt  Pose132.txt  Pose133.txt  (+466 more)
Texture/: CMakeLists.txt  texture.cpp  texture.h
Utils/: CImg.h  CMakeLists.txt  image.cpp  image.h  imagefilters.cpp  imageprocessing.cpp  imfragsh.fsh  imvertsh.vsh  objects.h  parse_stl.cpp  parse_stl.h  pgmb_io.cpp  pgmb_io.hpp
